# example-pkg-resources

./: README.md
example1/: MANIFEST.in  pyproject.toml  setup.py  test.py
example1/src/pkg1/: __init__.py  data_file.tif  get_data.py
example2/pkg2/: pyproject.toml  setup.py  test.py
example2/pkg2/src/: func.cpp  module.cpp  pkg2.h
example2/pkg2/src/pkg2/: __init__.py  load_data.py
example2/pkg2_data/: MANIFEST.in  pyproject.toml  setup.py  test.py
example2/pkg2_data/src/pkg2_data/: __init__.py  paths.py
example2/src/pkg2_data/: data.txt
example3/: MANIFEST.in  pyproject.toml  setup.py  test.py
example3/src/: module.cpp  pkg3.h
example3/src/pkg3/: __init__.py
